kubernetes/sabnzbd/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sab.tehmatt.com`)
    kind: Rule
    services:
    - name: sabnzbd
      port: 8080
    middlewares:
    - name: default-headers
  tls: {}
